--- a/ListenWiki/Info.plist
+++ b/ListenWiki/Info.plist
@@ -26,9 +26,9 @@
 		<true/>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Yogiji wants to access your location!</string>
+	<string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Yogiji wants to access your location!</string>
+    <string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
