--- a/ListenWiki/Info.plist
+++ b/ListenWiki/Info.plist
@@ -29,6 +29,8 @@
 	<string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>We need your location to show places with Wikipedia pages nearby.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
