--- a/ListenWiki/Info.plist
+++ b/ListenWiki/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -27,10 +27,10 @@
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>We need your location to show places with Wikipedia pages nearby.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-    <string>We need your location to show places with Wikipedia pages nearby.</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>We need your location to show places with Wikipedia pages nearby.</string>
+	<string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
