--- a/ListenWiki/Info.plist
+++ b/ListenWiki/Info.plist
@@ -31,6 +31,10 @@
 	<string>We need your location to show places with Wikipedia pages nearby.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need your location to show places with Wikipedia pages nearby.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
